// Copyright 2020 The Measurement Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v1alpha;

option java_package = "org.wfanet.measurement.api.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "CryptoProto";

// A representation of a combined public encryption key made of up the public
// keys for each publisher data server.
message CombinedPublicKey {
  message Key {
    string combined_public_key_id = 1;
  }
  // Resource key.
  Key key = 1;

  // Encryption key.
  ElGamalPublicKey encryption_key = 2;

  // Strictly increasing version, such that the version of a newer resource
  // will always be greater than that of an older resource.
  int64 version = 3;
}

// A public key in the ElGamal crypto system.
message ElGamalPublicKey {
  // ID of the OpenSSL built-in elliptic curve. For example, 415 for the
  // prime256v1 curve.
  int32 elliptic_curve_id = 1;

  // Public key generator `g`.
  bytes generator = 2;

  // Public key element `y = g^x`, where `g` is the generator and `x` is the
  // secret key.
  bytes element = 3;
}