// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v1alpha;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/api/v1alpha/crypto.proto";
import "wfa/measurement/api/v1alpha/sketch.proto";

option java_package = "org.wfanet.measurement.api.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "RequisitionProto";

// A requisition for a single metric for a single campaign.
message MetricRequisition {
  message Key {
    string data_provider_id = 1;
    string campaign_id = 2;
    string metric_requisition_id = 3;
  }
  // Resource key.
  Key key = 1;

  // Identifier for the campaign provided by the Data Provider.
  string campaign_reference_id = 5;

  // A time interval for a requisition.
  message TimeInterval {
    // Start of the time interval, inclusive. Required.
    google.protobuf.Timestamp start_time = 1;
    // End of the time interval, exclusive. Required. This must be later than
    // the start time.
    google.protobuf.Timestamp end_time = 2;
  }
  // The time interval of metric collection.
  TimeInterval collection_interval = 2;

  // State of a metrics requisition.
  enum State {
    // Default value if state is omitted. Should never be used.
    STATE_UNSPECIFIED = 0;
    // No metric value has been sent to fulfill this requisition.
    UNFULFILLED = 1;
    // A metric value has been sent to fulfill this requisition. Terminal state.
    FULFILLED = 2;
    // The requisition cannot be fulfilled. Terminal state. Any Reports using
    // this requisition will be put into the FAILED state.
    PERMANENTLY_UNFILLABLE = 3;
  }
  // The state of this requisition. Output-only.
  State state = 3;

  // Definition of metric that's needed to fulfill this requisition. Required.
  MetricDefinition metric_definition = 4;

  // Resource key of the CombinedPublicKey that is used to encrypt the metric
  // value.
  CombinedPublicKey.Key combined_public_key = 6;

  message Refusal {
    enum Justification {
      JUSTIFICATION_UNSPECIFIED = 0;

      // The Campaign is not known to the DataProvider. This should only happen
      // if the corresponding campaign in the DataProvider's system previously
      // existed but has been deleted.
      UNKNOWN_CAMPAIGN = 1;

      // The MetricDefinition specifies a configuration that the DataProvider
      // does not and will never support for this Campaign.
      METRIC_DEFINITION_UNSUPPORTED = 2;

      // The collection interval covers a range that is sufficiently long ago
      // that the DataProvider no longer retains the underlying data.
      COLLECTION_INTERVAL_TOO_DISTANT = 3;

      // The data required to fulfill this MetricRequisition is permanently
      // inaccessible or lost. This should only be used when there is no other
      // Justification that is more specific.
      DATA_UNAVAILABLE = 4;
    }
    Justification justification = 1;

    // Human-readable string adding more context to the provided Justification.
    // This should NOT include sensitive information.
    //
    // Example: "Data Provider X does not support Virtual ID model line Y".
    string message = 2;
  }
  // Details on why the requisition is in the PERMANENTLY_UNFILLABLE state.
  // Output-only.
  oneof unfillable_details {
    Refusal refusal = 7;
  }
}

// Representation of a metric to be collected.
message MetricDefinition {
  // Exactly one of these must be specified.
  oneof definition {
    // A metric to be collected as a sketch.
    SketchMetricDefinition sketch = 1;
  }

  // (--TODO(sanjayvas): Figure out which other metrics are needed (e.g.
  // non-deduped impression count?) --).

  // (--TODO(sanjayvas): Figure out how to support slicing/filtering. --)
}

// Representation of a metric to be collected as a sketch.
message SketchMetricDefinition {
  // Type of metric to be collected. Each value here should have a corresponding
  // Sketch field in MetricSet.
  enum Type {
    // Default value. Should never be used.
    TYPE_UNSPECIFIED = 0;
    // Impression reach (cardinality).
    IMPRESSION_REACH = 1;
    // Impression reach with frequency.
    IMPRESSION_REACH_AND_FREQUENCY = 2;
  }
  // The type of this SketchMetric. Required.
  Type type = 1;

  // Resource key of the sketch configuration. Required.
  SketchConfig.Key sketch_config = 2;
}